--- a/src/main/resources/com/vertex/vos/SalesOrderForm.fxml
+++ b/src/main/resources/com/vertex/vos/SalesOrderForm.fxml
@@ -179,6 +179,7 @@
                         <TableColumn prefWidth="75.0" text="Quantities">
                            <columns>
                               <TableColumn fx:id="orderedQuantityCol" prefWidth="75.0" text="Ordered" />
+                              <TableColumn fx:id="allocatedQuantityCol" prefWidth="75.0" text="Allocated" />
                               <TableColumn fx:id="servedQuantityCol" prefWidth="75.0" text="Served" />
                            </columns>
                         </TableColumn>
@@ -235,6 +236,7 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
                         <Label text="Gross Amount" />
@@ -247,6 +249,8 @@
                         <Label fx:id="netTotalLabel" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                         <Label fx:id="vatTotalLabel" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                         <Label fx:id="saleTotalLabel" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <Label text="Allocated Amount" GridPane.rowIndex="5" />
+                        <Label fx:id="allocatedTotalLabel" text="0.00" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                      </children>
                   </GridPane>
                </top>
